--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,14 @@
 {
-    "name": "h5p/h5p-core",
+    "name": "flyingflip/h5p-core",
     "type": "library",
     "description": "H5P Core functionality in PHP",
-    "keywords": ["h5p","hvp","interactive","content","quiz"],
+    "keywords": [
+        "h5p",
+        "hvp",
+        "interactive",
+        "content",
+        "quiz"
+    ],
     "homepage": "https://h5p.org",
     "license": "GPL-3.0",
     "authors": [
@@ -24,12 +30,12 @@
     },
     "autoload": {
         "files": [
-          "h5p.classes.php",
-          "h5p-development.class.php",
-          "h5p-file-storage.interface.php",
-          "h5p-default-storage.class.php",
-          "h5p-event-base.class.php",
-          "h5p-metadata.class.php"
+            "h5p.classes.php",
+            "h5p-development.class.php",
+            "h5p-file-storage.interface.php",
+            "h5p-default-storage.class.php",
+            "h5p-event-base.class.php",
+            "h5p-metadata.class.php"
         ]
     }
 }
